[package]
name = "veruszsupport"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM-specific dependencies
wasm-bindgen = "0.2.100"
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
console_error_panic_hook = { version = "0.1.7", optional = true }

# Core crypto dependencies
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand = "0.8.5"
secrecy = "0.8.0"
jubjub = "0.10.0"
blake2b_simd = "1.0.3"
getrandom = { version = "0.2.16", features = ["js"] }
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }
sha2 = "0.10.8"
serde-wasm-bindgen = "0.6"



# Zcash dependencies using direct git forks to ensure correct code is used.
# This avoids the issues with the [patch] section and ensures synchronized forks.
zcash_primitives = { git = "https://github.com/who-biz/librustzcash", branch = "ka_agree", default-features = false }
zcash_keys = { git = "https://github.com/who-biz/librustzcash", branch = "ka_agree", default-features = false, features = ["sapling"] }
zcash_note_encryption = { git = "https://github.com/who-biz/zcash_note_encryption", branch = "ka_agree" }
sapling-crypto = { git = "https://github.com/who-biz/sapling-crypto", branch = "ka_agree", package = "sapling-crypto" }

# zcash_address from crates.io, with the 'sapling' feature enabled.
zcash_address = "0.8.0"


[features]
default = ["console_error_panic_hook", "wee_alloc"]


[patch.crates-io]
sapling-crypto = { git = "https://github.com/who-biz/sapling-crypto", branch = "ka_agree" }
zcash_note_encryption = { git = "https://github.com/who-biz/zcash_note_encryption", branch = "ka_agree" }
orchard = { git = "https://github.com/who-biz/orchard", branch = "ka_agree" } # <-- FIXED

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
