[package]
name = "veruszsupport"
version = "0.2.0"
edition = "2021"
rust-version = "1.77"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM-specific dependencies

wasm-bindgen = "0.2.100"
js-sys = "0.3"
wee_alloc = { version = "0.4.5", optional = true }
anyhow = "1.0.86"
console_error_panic_hook = { version = "0.1.7", optional = true }
secrecy = "0.8.0"

# Zcash dependencies using direct git forks to ensure correct code is used.

zcash_primitives = { git = "https://github.com/who-biz/librustzcash", branch = "ka_agree", default-features = false }
zcash_keys = { git = "https://github.com/who-biz/librustzcash", branch = "ka_agree", default-features = false, features = ["sapling"] }
zcash_note_encryption = { git = "https://github.com/who-biz/zcash_note_encryption", branch = "ka_agree" }
sapling-crypto = { git = "https://github.com/who-biz/sapling-crypto", branch = "ka_agree", package = "sapling-crypto" }

# artist librustzcash verus_zfunc functions

verus_zfunc = { git = "https://github.com/iamahmedshahh/librustzcash" , branch = "ka_agree-security-fixes" }

[patch.crates-io]
sapling-crypto = { git = "https://github.com/who-biz/sapling-crypto", branch = "ka_agree" }
zcash_note_encryption = { git = "https://github.com/who-biz/zcash_note_encryption", branch = "ka_agree" }
orchard = { git = "https://github.com/who-biz/orchard", branch = "ka_agree" } # <-- FIXED

[features]
default = ["console_error_panic_hook", "wee_alloc"]



[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
